...
                                style: Theme.of(context).textTheme.bodySmall,
                              ),
                            ],
                          )),
                          TextButton(
                            onPressed: controller.navigateToForgotPassword,
                            child: const Text('Forgot Password?'),
                          ),
                        ],
                      ),
                      
                      const SizedBox(height: 24),
                      
...
                      "Don't have an account? ",
                      style: Theme.of(context).textTheme.bodyMedium,
                    ),
                    TextButton(
                      onPressed: controller.navigateToSignup,
                      child: const Text(
                        'Sign Up',
                        style: TextStyle(
                          color: AppConstants.primaryColor,
                          fontWeight: FontWeight.w700,
                        ),
                      ),
                    ),
...
